--- a/assets/style.css
+++ b/assets/style.css
@@ -6,15 +6,15 @@ header,
 footer {
     width: 100%;
     height: 120px;
-    background-color: blue;
-    color: white;
+    background-color: crimson;
+    color: whitesmoke;
 }
 h1,
 h2 {
     text-align: center;
 }
 img {
-    display: block;
+    display: Block;
     height: 50px;
     width: 50px;
     margin-left: auto;
@@ -31,6 +31,6 @@ p {
   .card {
     width: 80%;
     margin: 40px auto;
-    border: 5px solid gray;
+    border: 5px solid Black;
     box-shadow: 5px 10px #F0044F;
   }
